Update: name change

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EVE-OS Fix Finder - Cobalt2 Theme</title>
+    <title>WhatTheFix - Cobalt2 Theme</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <h1 class="title">
                     <i class="fas fa-code-branch"></i>
-                    EVE-OS Fix Finder
+                    WhatTheFix
                 </h1>
                 <p class="subtitle">Search for fixes and commits in the EVE-OS repository</p>
             </div>
