Update: Changed Author to Signed off by

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                 </div>
                 
                 <div class="commit-detail">
-                    <h4><i class="fas fa-user"></i> Author</h4>
+                    <h4><i class="fas fa-user"></i> Sign off by:</h4>
                     <p id="commitAuthor"></p>
                 </div>
                 
