--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Choose Provider</title>
+    <title>Login - Okta SSO</title>
     <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -11,8 +11,8 @@
 <body>
     <div class="login-page">
         <div class="login-card">
-            <h1 class="login-title">Sign in</h1>
-            <p class="login-subtitle">Choose your authentication provider</p>
+            <h1 class="login-title">Sign in to WhatTheFix</h1>
+            <p class="login-subtitle">Access EVE-OS commit search and analysis</p>
             <div class="providers">
                 <button class="provider-card okta" onclick="window.location.href='/auth/login'" aria-label="Login with Okta">
                     <div class="provider-icon">
@@ -20,19 +20,7 @@
                     </div>
                     <div class="provider-content">
                         <div class="provider-name">Login with Okta</div>
-                        <div class="provider-desc">Enterprise SSO via Okta</div>
-                    </div>
-                    <div class="provider-cta" aria-hidden="true">
-                        <i class="fas fa-arrow-right"></i>
-                    </div>
-                </button>
-                <button class="provider-card google" onclick="window.location.href='/auth/google/login'" aria-label="Login with Google">
-                    <div class="provider-icon">
-                        <i class="fab fa-google"></i>
-                    </div>
-                    <div class="provider-content">
-                        <div class="provider-name">Login with Google</div>
-                        <div class="provider-desc">Use your Google account</div>
+                        <div class="provider-desc">Enterprise SSO Authentication</div>
                     </div>
                     <div class="provider-cta" aria-hidden="true">
                         <i class="fas fa-arrow-right"></i>
