Simplify GitHub settings UI and remove highlights
Removed the hero highlights, info cards, and related sidebar content from the settings page for a cleaner, more focused UI. Updated the copy to clarify the benefits of adding a personal access token. Corresponding CSS for removed elements was also deleted to streamline styles.

--- a/public/settings.html
+++ b/public/settings.html
@@ -56,37 +56,8 @@
             <section class="settings-hero">
                 <div class="settings-hero-copy">
                     <span class="hero-eyebrow">GitHub Integration</span>
-                    <h2>Unlock the full rate limit & stay ahead</h2>
-                    <p>Bring in your personal access token to keep every search fast, reliable, and tailored to you.</p>
-                    <div class="settings-hero-highlights">
-                        <div class="hero-highlight">
-                            <div class="hero-highlight-icon">
-                                <i class="fas fa-bolt"></i>
-                            </div>
-                            <div>
-                                <strong>5,000 req/hr</strong>
-                                <span>vs 60 without authentication</span>
-                            </div>
-                        </div>
-                        <div class="hero-highlight">
-                            <div class="hero-highlight-icon">
-                                <i class="fas fa-lock"></i>
-                            </div>
-                            <div>
-                                <strong>Encrypted storage</strong>
-                                <span>Secrets stay private</span>
-                            </div>
-                        </div>
-                        <div class="hero-highlight">
-                            <div class="hero-highlight-icon">
-                                <i class="fas fa-chart-line"></i>
-                            </div>
-                            <div>
-                                <strong>Live validation</strong>
-                                <span>Instant token health checks</span>
-                            </div>
-                        </div>
-                    </div>
+                    <h2>Unlock the full rate limit</h2>
+                    <p>Bring in your personal access token to increase your API call limit from 60 to 5,000 requests per hour.</p>
                 </div>
                 <div class="settings-hero-visual">
                     <div class="hero-bubble">
@@ -97,9 +68,8 @@
                     </div>
                 </div>
             </section>
-            <div class="settings-layout">
-                <section class="settings-primary">
-                    <div class="settings-card">
+            <section class="settings-primary">
+                <div class="settings-card">
                         <div class="settings-header">
                             <h2><i class="fas fa-cog"></i> Account Settings</h2>
                             <p class="settings-subtitle">Manage your GitHub integration and preferences</p>
@@ -107,7 +77,7 @@
 
                         <div class="settings-section">
                             <div class="settings-section-header">
-                                <h3><i class="fas fa-github"></i> GitHub Personal Access Token</h3>
+                                <h3></i> GitHub Personal Access Token</h3>
                                 <p class="settings-description">
                                     Configure your GitHub Personal Access Token to increase API rate limits from 60 to 5,000 requests per hour.
                                 </p>
@@ -133,7 +103,7 @@
                                     </div>
                                     <div class="form-help">
                                         <i class="fas fa-info-circle"></i>
-                                        Create a token at <a href="https://github.com/settings/tokens/new" target="_blank" rel="noopener">github.com/settings/tokens/new</a> with <code>public_repo</code> scope
+                                        Create a token at <a href="https://github.com/settings/tokens/new" target="_blank" rel="noopener">github.com/settings/tokens/new</a> and paste it back here. No scope selection neededd.
                                     </div>
                                 </div>
 
@@ -167,55 +137,8 @@
                                 Back to Search
                             </button>
                         </div>
-                    </div>
-                </section>
-
-                <aside class="settings-secondary">
-                    <div class="info-card">
-                        <div class="info-card-header">
-                            <h3><i class="fas fa-info-circle"></i> Why connect a token?</h3>
-                            <p>Get elite-level rate limits and keep your searches blazing fast.</p>
-                        </div>
-                        <div class="info-item">
-                            <i class="fas fa-rocket"></i>
-                            <div>
-                                <strong>Higher Rate Limits</strong>
-                                <p>Increase from 60 to 5,000 requests per hour</p>
-                            </div>
-                        </div>
-                        <div class="info-item">
-                            <i class="fas fa-shield-alt"></i>
-                            <div>
-                                <strong>Secure Storage</strong>
-                                <p>Your token is encrypted and stored securely on our servers</p>
-                            </div>
-                        </div>
-                        <div class="info-item">
-                            <i class="fas fa-user"></i>
-                            <div>
-                                <strong>Personal Use</strong>
-                                <p>Only you can access and modify your token</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="info-card tip-card">
-                        <div class="info-card-header">
-                            <h3><i class="fas fa-lightbulb"></i> Quick how-to</h3>
-                            <p>Generate a classic token with <code>public_repo</code> scope</p>
-                        </div>
-                        <ul class="tip-list">
-                            <li>Open GitHub → Settings → Developer settings → Personal access tokens.</li>
-                            <li>Create a new token, give it a memorable name, and select <code>public_repo</code>.</li>
-                            <li>Copy the token once — we'll encrypt it as soon as you hit save.</li>
-                        </ul>
-                        <a class="btn btn-outline info-cta" href="https://github.com/settings/tokens" target="_blank" rel="noopener">
-                            <i class="fas fa-external-link-alt"></i>
-                            Open GitHub settings
-                        </a>
-                    </div>
-                </aside>
-            </div>
+                </div>
+            </section>
         </main>
     </div>
 
