--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Okta SSO</title>
+    <title>WhatTheFix - Search for fixes in the EVE-OS repository</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -11,29 +12,31 @@
 <body>
     <div class="login-page">
         <div class="login-card">
-            <h1 class="login-title">Sign in to WhatTheFix</h1>
-            <p class="login-subtitle">Access EVE-OS commit search and analysis</p>
-            <div class="providers">
-                <button class="provider-card okta" onclick="window.location.href='/auth/login'" aria-label="Login with Okta">
-                    <div class="provider-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <div class="provider-content">
-                        <div class="provider-name">Login with Okta</div>
-                        <div class="provider-desc">Enterprise SSO Authentication</div>
-                    </div>
-                    <div class="provider-cta" aria-hidden="true">
-                        <i class="fas fa-arrow-right"></i>
-                    </div>
-                </button>
+            <div class="login-card-header">
+                <span class="login-pill">
+                    <i class="fas fa-lock"></i>
+                    Secure SSO
+                </span>
+                <h1 class="login-title">Sign in to WhatTheFix</h1>
+                <p class="login-subtitle">Use your Okta account to unlock EVE-OS fixes and insights.</p>
             </div>
-            <div class="login-help">
-                <a href="/" class="login-back"><i class="fas fa-arrow-left"></i> Back to app</a>
-            </div>
+            <button class="login-provider" onclick="window.location.href='/auth/login'" aria-label="Continue with Okta">
+                <span class="provider-icon">
+                    <i class="fas fa-shield-alt"></i>
+                </span>
+                <span class="provider-details">
+                    <span class="provider-name">Continue with Okta</span>
+                    <span class="provider-desc">Single sign-on by your organization</span>
+                </span>
+                <span class="provider-arrow" aria-hidden="true">
+                    <i class="fas fa-arrow-right"></i>
+                </span>
+            </button>
+            <a href="/" class="login-back">
+                <i class="fas fa-arrow-left"></i>
+                Back to app
+            </a>
         </div>
     </div>
 </body>
 </html>
-
-
-
