Improve sample styling and update example values
Enhanced the .empty-sample CSS for better alignment, padding, and responsiveness. Updated example commit IDs and author names in index.html for clarity. Fixed a typo in settings.html section class.

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
                             <i class="fas fa-hashtag"></i>
                             <h4>Commit ID</h4>
                             <p>Paste a full or short SHA hash to jump straight to one commit.</p>
-                            <span class="empty-sample">6e22518</span>
+                            <span class="empty-sample" title="f63bb92">f63bb92</span>
                         </div>
                         <div class="empty-card">
                             <i class="fas fa-keyboard"></i>
@@ -116,7 +116,7 @@
                             <i class="fas fa-user-circle"></i>
                             <h4>Author details</h4>
                             <p>Include a contributor name or email to see their recent work.</p>
-                            <span class="empty-sample">"pellizzer"</span>
+                            <span class="empty-sample">"Renê"</span>
                         </div>
                     </div>
 
@@ -127,7 +127,7 @@
                             <button class="example-tag" type="button" data-example="network regression">network regression</button>
                             <button class="example-tag" type="button" data-example="container watchdog">container watchdog</button>
                             <button class="example-tag" type="button" data-example="security patch">security patch</button>
-                            <button class="example-tag" type="button" data-example="2b7021c">2b7021c</button>
+                            <button class="example-tag" type="button" data-example="f63bb92" title="f63bb92">f63bb92</button>
                         </div>
                     </div>
                 </div>
