--- a/public/settings.html
+++ b/public/settings.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </section>
-            <section class="settings-primary">
+rimary">
                 <div class="settings-card">
                         <div class="settings-header">
                             <h2><i class="fas fa-cog"></i> Account Settings</h2>
