Add natural language date filters to commit search
Implements parsing of month, year, and day keywords in search queries to filter commits by date. Updates the UI to display applied date filters and improves example search tags to demonstrate the new feature. Also fixes a minor typo in settings.html and enhances the styling of example tags for better overflow handling.

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                             <i class="fas fa-search"></i>
                         </div>
                         <h3>Find EVE-OS fixes in seconds</h3>
-                        <p>Search by commit ID when you know the exact fix, or use message keywords to explore related work across the repository.</p>
+                        <p>Search by commit ID when you know the exact fix, the PR or use message keywords to explore related work across the repository. If you type a date like "oct 2025" the app will search for all commits and PRs from October 2025. It works with full URLs too -be creative!</p>
                     </div>
 
                     <div class="empty-grid">
@@ -124,9 +124,9 @@
                         <span class="empty-suggest-title"><i class="fas fa-lightbulb"></i> Try one of these:</span>
                         <div class="example-tags">
                             <button class="example-tag" type="button" data-example="panic reboot fix">panic reboot fix</button>
-                            <button class="example-tag" type="button" data-example="network regression">network regression</button>
+                            <button class="example-tag" type="button" data-example="network regression 2024">network regression 2024</button>
                             <button class="example-tag" type="button" data-example="container watchdog">container watchdog</button>
-                            <button class="example-tag" type="button" data-example="security patch">security patch</button>
+                            <button class="example-tag" type="button" data-example="rene oct 2025">rene oct 2025</button>
                             <button class="example-tag" type="button" data-example="f63bb92" title="f63bb92">f63bb92</button>
                         </div>
                     </div>
